// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DomainFieldLabel/> label and helpTip 1`] = `
[
  "Field ",
  <span
    className="domain-no-wrap"
  >
    Label
    <span
      className="label-help-target"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="label-help-icon fa fa-question-circle"
      />
    </span>
    
  </span>,
]
`;

exports[`<DomainFieldLabel/> label and required 1`] = `
[
  "Field ",
  <span
    className="domain-no-wrap"
  >
    Label
     *
  </span>,
]
`;

exports[`<DomainFieldLabel/> label only 1`] = `
[
  "Field ",
  <span
    className="domain-no-wrap"
  >
    Label
    
  </span>,
]
`;

exports[`<DomainFieldLabel/> label, required, and helpTip 1`] = `
[
  "Field ",
  <span
    className="domain-no-wrap"
  >
    Label
    <span
      className="label-help-target"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="label-help-icon fa fa-question-circle"
      />
    </span>
     *
  </span>,
]
`;
